frontend/src/css/style.css
.scrollbar {
    overflow-y: auto;
    scrollbar-width: thin;
    scrollbar-color: grey;
}

.scrollbar::-webkit-scrollbar {
    width: 12px;
}

.scrollbar::-webkit-scrollbar-track {
    background: #e0e0e0;
    border-radius: 10px;
}

.scrollbar::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 10px;
}

.scrollbar::-webkit-scrollbar-thumb:hover {
    background: #555;
}
.p-0 {
    padding: 0 !important;
}

.p-1 {
    padding: 0.25rem !important;
}

.p-2 {
    padding: 0.5rem !important;
}

.p-3 {
    padding: 1rem !important;
}

.p-4 {
    padding: 1.8rem !important;
}

.p-5 {
    padding: 3rem !important;
}

.p-6 {
    padding: 4rem !important;
}

.p-7 {
    padding: 5rem !important;
}

.p-8 {
    padding: 7.5rem !important;
}

.p-9 {
    padding: 10rem !important;
}

.p-10 {
    padding: 12.5rem !important;
}

.p-11 {
    padding: 15rem !important;
}

.p-x1 {
    padding: 1.25rem !important;
}

.px-0 {
    padding-right: 0 !important;
    padding-left: 0 !important;
}

.px-1 {
    padding-right: 0.25rem !important;
    padding-left: 0.25rem !important;
}

.px-2 {
    padding-right: 0.5rem !important;
    padding-left: 0.5rem !important;
}

.px-3 {
    padding-right: 1rem !important;
    padding-left: 1rem !important;
}

.px-4 {
    padding-right: 1.8rem !important;
    padding-left: 1.8rem !important;
}

.px-5 {
    padding-right: 3rem !important;
    padding-left: 3rem !important;
}

.px-6 {
    padding-right: 4rem !important;
    padding-left: 4rem !important;
}

.px-7 {
    padding-right: 5rem !important;
    padding-left: 5rem !important;
}

.px-8 {
    padding-right: 7.5rem !important;
    padding-left: 7.5rem !important;
}

.px-9 {
    padding-right: 10rem !important;
    padding-left: 10rem !important;
}

.px-10 {
    padding-right: 12.5rem !important;
    padding-left: 12.5rem !important;
}

.px-11 {
    padding-right: 15rem !important;
    padding-left: 15rem !important;
}

.px-x1 {
    padding-right: 1.25rem !important;
    padding-left: 1.25rem !important;
}

.py-0 {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.py-1 {
    padding-top: 0.25rem !important;
    padding-bottom: 0.25rem !important;
}

.py-2 {
    padding-top: 0.5rem !important;
    padding-bottom: 0.5rem !important;
}

.py-3 {
    padding-top: 1rem !important;
    padding-bottom: 1rem !important;
}

.py-4 {
    padding-top: 1.8rem !important;
    padding-bottom: 1.8rem !important;
}

.py-5 {
    padding-top: 3rem !important;
    padding-bottom: 3rem !important;
}

.py-6 {
    padding-top: 4rem !important;
    padding-bottom: 4rem !important;
}

.py-7 {
    padding-top: 5rem !important;
    padding-bottom: 5rem !important;
}

.py-8 {
    padding-top: 7.5rem !important;
    padding-bottom: 7.5rem !important;
}

.py-9 {
    padding-top: 10rem !important;
    padding-bottom: 10rem !important;
}

.py-10 {
    padding-top: 12.5rem !important;
    padding-bottom: 12.5rem !important;
}

.py-11 {
    padding-top: 15rem !important;
    padding-bottom: 15rem !important;
}

.py-x1 {
    padding-top: 1.25rem !important;
    padding-bottom: 1.25rem !important;
}

.pt-0 {
    padding-top: 0 !important;
}

.pt-1 {
    padding-top: 0.25rem !important;
}

.pt-2 {
    padding-top: 0.5rem !important;
}

.pt-3 {
    padding-top: 1rem !important;
}

.pt-4 {
    padding-top: 1.8rem !important;
}

.pt-5 {
    padding-top: 3rem !important;
}

.pt-6 {
    padding-top: 4rem !important;
}

.pt-7 {
    padding-top: 5rem !important;
}

.pt-8 {
    padding-top: 7.5rem !important;
}

.pt-9 {
    padding-top: 10rem !important;
}

.pt-10 {
    padding-top: 12.5rem !important;
}

.pt-11 {
    padding-top: 15rem !important;
}

.pt-x1 {
    padding-top: 1.25rem !important;
}

.pe-0 {
    padding-right: 0 !important;
}

.pe-1 {
    padding-right: 0.25rem !important;
}

.pe-2 {
    padding-right: 0.5rem !important;
}

.pe-3 {
    padding-right: 1rem !important;
}

.pe-4 {
    padding-right: 1.8rem !important;
}

.pe-5 {
    padding-right: 3rem !important;
}

.pe-6 {
    padding-right: 4rem !important;
}

.pe-7 {
    padding-right: 5rem !important;
}

.pe-8 {
    padding-right: 7.5rem !important;
}

.pe-9 {
    padding-right: 10rem !important;
}

.pe-10 {
    padding-right: 12.5rem !important;
}

.pe-11 {
    padding-right: 15rem !important;
}

.pe-x1 {
    padding-right: 1.25rem !important;
}

.pb-0 {
    padding-bottom: 0 !important;
}

.pb-1 {
    padding-bottom: 0.25rem !important;
}

.pb-2 {
    padding-bottom: 0.5rem !important;
}

.pb-3 {
    padding-bottom: 1rem !important;
}

.pb-4 {
    padding-bottom: 1.8rem !important;
}

.pb-5 {
    padding-bottom: 3rem !important;
}

.pb-6 {
    padding-bottom: 4rem !important;
}

.pb-7 {
    padding-bottom: 5rem !important;
}

.pb-8 {
    padding-bottom: 7.5rem !important;
}

.pb-9 {
    padding-bottom: 10rem !important;
}

.pb-10 {
    padding-bottom: 12.5rem !important;
}

.pb-11 {
    padding-bottom: 15rem !important;
}

.pb-x1 {
    padding-bottom: 1.25rem !important;
}

.ps-0 {
    padding-left: 0 !important;
}

.ps-1 {
    padding-left: 0.25rem !important;
}

.ps-2 {
    padding-left: 0.5rem !important;
}

.ps-3 {
    padding-left: 1rem !important;
}

.ps-4 {
    padding-left: 1.8rem !important;
}

.ps-5 {
    padding-left: 3rem !important;
}

.ps-6 {
    padding-left: 4rem !important;
}

.ps-7 {
    padding-left: 5rem !important;
}

.ps-8 {
    padding-left: 7.5rem !important;
}

.ps-9 {
    padding-left: 10rem !important;
}

.ps-10 {
    padding-left: 12.5rem !important;
}

.ps-11 {
    padding-left: 15rem !important;
}

.ps-x1 {
    padding-left: 1.25rem !important;
}
.mx-auto {
    margin-right: auto !important;
    margin-left: auto !important;
}

.my-0 {
    margin-top: 0 !important;
    margin-bottom: 0 !important;
}

.my-1 {
    margin-top: 0.25rem !important;
    margin-bottom: 0.25rem !important;
}

.my-2 {
    margin-top: 0.5rem !important;
    margin-bottom: 0.5rem !important;
}
/* ... */

